--- a/core/templates/page/css/page.css
+++ b/core/templates/page/css/page.css
@@ -45,7 +45,7 @@
 
 .template-page-container .body {
     grid-area: body;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 /* Altura ocupada por template(template_height): 5 + 5 + 165 + 10 = 185 */
